tests/rosetta/out/Zig/character-codes-4.error
zig build error: exit status 1
/tmp/TestMochiZigGoldencharacter-codes-42913262923/001/prog.zig:4:34: error: function parameter shadows declaration of 'b'
/tmp/TestMochiZigGoldencharacter-codes-42913262923/001/prog.zig:8:1: note: declared here
