tests/rosetta/out/Zig/character-codes-4.zig
// Generated by Mochi compiler v0.10.26 on 1970-01-01T00:00:00Z
const std = @import("std");

fn _concat_string(a: []const u8, b: []const u8) []const u8 {
    return std.mem.concat(u8, &[_][]const u8{ a, b }) catch |err| handleError(err);
}

var b = 97; // i32
var r = 960; // i32

fn chr(n: i32) []const u8 {
    if (n == 97) {
        return "a";
    }
    if (n == 960) {
        return "π";
    }
    if (n == 65) {
        return "A";
    }
    return "?";
}

pub fn main() void {
    std.debug.print("{s}\n", .{_concat_string(_concat_string(chr(97), " "), chr(960))});
    std.debug.print("{s}\n", .{_concat_string(_concat_string(chr(b), " "), chr(r))});
}
